// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllColors 1`] = `
<div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        default
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-primary text-primary-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        primary
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-secondary text-secondary-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        secondary
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-info text-info-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        info
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-success text-success-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        success
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-warning text-warning-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        warning
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-danger text-danger-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        danger
      </span>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > AllRadius 1`] = `
<div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-none bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        none
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-small bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        sm
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-medium bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        md
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-large bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        lg
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        full
      </span>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > AllSizes 1`] = `
<div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-6 text-tiny rounded-full bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-1 flex items-center gap-2"
      >
        sm
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        md
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-2 h-8 text-medium rounded-full bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        lg
      </span>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > AllVariants 1`] = `
<div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-success text-success-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        solid
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap border-medium px-1 h-7 text-small rounded-full bg-transparent border-success text-success"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        bordered
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-transparent text-success"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        light
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-success/20 text-success-700 dark:text-success"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        flat
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap border-medium px-1 h-7 text-small rounded-full border-default bg-default-100 text-success"
    >
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        faded
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap border-medium px-1 h-7 text-small rounded-full border-default text-foreground bg-transparent"
    >
      <span
        class="w-2 h-2 ml-1 rounded-full bg-success"
      />
      <span
        class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
      >
        dot
      </span>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-default text-default-foreground"
  >
    <span
      class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
    >
      Some Label
    </span>
  </div>
</div>
`;

exports[`Story Snapshots > EndContent 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full pr-2 bg-default text-default-foreground"
  >
    <span
      class="flex-1 text-inherit font-normal px-2 flex items-center gap-2 pr-1"
    >
      Some Label
    </span>
    <span
      data-testid="icon-FaRocket"
    >
      FaRocket
    </span>
  </div>
</div>
`;

exports[`Story Snapshots > IconAndContent 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-default text-default-foreground"
  >
    <span
      class="flex-1 text-inherit font-normal px-2 flex items-center gap-2"
    >
      <span>
        <span
          data-testid="icon-FaRocket"
        >
          FaRocket
        </span>
      </span>
      Some Label
    </span>
  </div>
</div>
`;

exports[`Story Snapshots > IconOnly 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-default text-default-foreground"
  >
    <span
      class="flex-1 text-inherit font-normal px-1"
    >
      <span>
        <span
          data-testid="icon-FaRocket"
        >
          FaRocket
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Story Snapshots > WithCloseButton 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-default text-default-foreground"
  >
    <span
      class="flex-1 text-inherit font-normal px-2 pr-1 flex items-center gap-2"
    >
      Some Label
    </span>
    <span
      aria-label="close chip"
      class="z-10 appearance-none outline-none select-none transition-opacity opacity-70 hover:opacity-100 cursor-pointer active:opacity-disabled tap-highlight-transparent text-large"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="1em"
        role="presentation"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2a10 10 0 1010 10A10.016 10.016 0 0012 2zm3.36 12.3a.754.754 0 010 1.06.748.748 0 01-1.06 0l-2.3-2.3-2.3 2.3a.748.748 0 01-1.06 0 .754.754 0 010-1.06l2.3-2.3-2.3-2.3A.75.75 0 019.7 8.64l2.3 2.3 2.3-2.3a.75.75 0 011.06 1.06l-2.3 2.3z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
</div>
`;
